--- a/package.json
+++ b/package.json
@@ -1,17 +1,4 @@
 {
-  "name": "alpine-control-room",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
-  },
   "dependencies": {
     "leaflet": "^1.9.4",
     "vue": "^3.5.13",
@@ -36,5 +23,18 @@
     "vite": "^6.0.9",
     "vite-plugin-vue-devtools": "^7.6.5",
     "vue-tsc": "^2.1.10"
-  }
+  },
+  "name": "alpine-control-room-vue",
+  "private": true,
+  "scripts": {
+    "build": "run-p type-check \"build-only {@}\" --",
+    "build-only": "vite build",
+    "dev": "vite",
+    "format": "prettier --write src/",
+    "lint": "eslint . --fix",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --build"
+  },
+  "type": "module",
+  "version": "1.1.2"
 }
